added search functions

--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,30 @@ transposon-pipeline-master/output/FreadI1_trimmed_sorted_Hits.csv
 transposon-pipeline-master/output/hit_summary.RDF_1.csv
 transposon-pipeline-master/output/insertion_vs_neighborhood_correlations.txt
 transposon-pipeline-master/output/stats.csv
+SCTrainingSet/mapped_sorted_reads.txt
+SCTrainingSet/FreadI1_trimmed.fastq
+SCTrainingSet/FreadI1_trimmed.sam
+SCTrainingSet/mapped_FreadI1.fastq
+SCTrainingSet/mapped_FreadI1_trimmed.bam
+SCTrainingSet/mapped_FreadI1_trimmed.sam
+SCTrainingSet/mapped_FreadI1_trimmed_sorted.bam
+SCTrainingSet/mapped_FreadI1_trimmed_sorted.bam.bai
+SCTrainingSet/unmapped_FreadI1.fastq
+SCTrainingSet/unmapped_FreadI1_trimmed.bam
+SCTrainingSet/unmapped_FreadI1_trimmed.sam
+SCTrainingSet/unmapped_FreadI1_trimmed_sorted.bam
+SCTrainingSet/unmapped_FreadI1_trimmed_sorted.bam.bai
+SCTrainingSet/unmapped_sorted_reads.txt
+SCTrainingSet/WT_1/unaligned/FreadI1_trimmed.fastq
+SCTrainingSet/WT_1/unaligned/S288C_reference_sequence_R64-2-1_20150113.fsa
+SCTrainingSet/WT_1/unaligned/S288C_reference_sequence_R64-2-1_20150113.fsa.fai
+SCTrainingSet/unmapped_sorted_reads_FreadI1.txt
+SCTrainingSet/both_ends1_sorted.bam
+SCTrainingSet/both_ends1_sorted.bam.bai
+SCTrainingSet/mapped_both_ends.sam
+SCTrainingSet/mapped_both_ends.1.fastq
+SCTrainingSet/mapped_both_ends.2.fastq
+SCTrainingSet/mapped_sorted_reads_FreadI1.txt
+SCTrainingSet/unmapped_both_ends.sam
+SCTrainingSet/unmapped_both_ends.1.fastq
+SCTrainingSet/unmapped_both_ends.2.fastq
