plotting and analyzing classifiers

--- a/.gitignore
+++ b/.gitignore
@@ -123,3 +123,49 @@ SCTrainingSet/mapped_sorted_reads_FreadI1.txt
 SCTrainingSet/unmapped_both_ends.sam
 SCTrainingSet/unmapped_both_ends.1.fastq
 SCTrainingSet/unmapped_both_ends.2.fastq
+all_hermes_verdict.csv
+Dataset 2 ORF classifications.xlsx
+all_acds_verdict.csv
+all_anton_verdict.csv
+all_features_comparison.xlsx
+all_genes.csv
+all_genes.xlsx
+both_hits.xlsx
+chart.csv
+both_verdicts.csv
+ca_tn2.png
+catn_verdict.xlsx
+chart.xlsx
+merged.csv
+hermes_and_acds_verdict.csv
+hermes_verdict.xlsx
+merged2.xlsx
+sanity_check.csv
+sanity_check.xlsx
+sanity_check_2.xlsx
+sanity_check_classifier.xlsx
+sc_tn.png
+sc_tn_feature_importance.png
+test3.png
+test.png
+test10.png
+test11.png
+test12.png
+test13.png
+test14.png
+test15.png
+test16.png
+test17.png
+test18.png
+test2.png
+test4.png
+test5.png
+test6.png
+test7.png
+test8.png
+SCTrainingSet/Both_readI1_trimmed.sam
+training_hermes_verdict.csv
+verdict.csv
+your_file.txt
+your_file2.txt
+SCTrainingSet/RreadI1.fastq
